# hexagonal-rust

./: Cargo.toml  notes.md
src/: main.rs
src/domain/: auth.rs
src/domain/auth/: models.rs
